@@ -4,6 +4,7 @@ import com.ing_software_grupo8.sistema_de_pedidos.DTO.*;
 import com.ing_software_grupo8.sistema_de_pedidos.entity.*;
 import com.ing_software_grupo8.sistema_de_pedidos.exception.ApiException;
 import com.ing_software_grupo8.sistema_de_pedidos.repository.*;
+import com.ing_software_grupo8.sistema_de_pedidos.rules.RuleManager;
 import com.ing_software_grupo8.sistema_de_pedidos.utils.OrderStateEnum;
 import com.ing_software_grupo8.sistema_de_pedidos.utils.RoleEnum;
 import jakarta.servlet.http.HttpServletRequest;
@@ -18,9 +19,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.mock.web.MockHttpServletRequest;
 
 import java.time.LocalDateTime;
-import java.time.LocalTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -41,8 +40,12 @@ class OrderServiceTest {
 
     @Mock
     private IOrderStateRepository orderStateRepository;
+
     @Mock
     private IJwtService jwtService;
+
+    @Mock
+    private RuleManager ruleManager;
 
     @InjectMocks
     private OrderService orderService;
@@ -56,11 +59,11 @@ class OrderServiceTest {
     void getAllUserNotFoundShouldThrowApiException() {
         HttpServletRequest servletRequest = new MockHttpServletRequest();
         User user = new User();
-        user.setRole(RoleEnum.ADMIN);
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
-        when(!jwtService.tokenHasRoleAdmin(servletRequest)).thenReturn(true);
+        user.setUserId(1L);
+        when(userRepository.findById(user.getUserId())).thenReturn(Optional.empty());
+        when(jwtService.tokenHasRoleUser(servletRequest)).thenReturn(true);
 
-        ApiException exception = assertThrows(ApiException.class, () -> orderService.getAll(1L, servletRequest));
+        ApiException exception = assertThrows(ApiException.class, () -> orderService.getAll(user.getUserId(), servletRequest));
 
         assertEquals(HttpStatus.BAD_REQUEST, exception.getStatus());
         assertEquals("Usuario no encontrado.", exception.getMessage());
@@ -88,9 +91,9 @@ class OrderServiceTest {
         List<ProductOrder> productOrders = new ArrayList<>();
         Product product = new Product();
         product.setName("Producto de prueba");
-        product.setStock(new Stock(1L,"KG",10f));
+        product.setStock(new Stock(1L, "KG", 10f));
         Attribute attribute = new Attribute(1L, product, "Descripción", "Valor");
-        product.setAttributes(Arrays.asList(attribute));
+        product.setAttributes(List.of(attribute));
         ProductOrder productOrder = new ProductOrder();
         productOrder.setOrderQuantity(2);
         productOrder.setProduct(product);
@@ -105,29 +108,33 @@ class OrderServiceTest {
         assertNotNull(result);
         assertFalse(result.getOrderResponseDTOList().isEmpty());
         assertEquals(1, result.getOrderResponseDTOList().size());
-        assertEquals("Confirmado", result.getOrderResponseDTOList().get(0).getOrderState());
+        assertEquals("Confirmado", result.getOrderResponseDTOList().getFirst().getOrderState());
     }
 
     @Test
     void createInvalidUserShouldThrowApiException() {
         HttpServletRequest servletRequest = new MockHttpServletRequest();
-        OrderRequestDTO orderRequestDTO = new OrderRequestDTO();
-        orderRequestDTO.setUserId(1L);
+        ProductOrderDTO productOrderDTO = new ProductOrderDTO(2L, 1);
+        OrderRequestDTO orderRequestDTO = new OrderRequestDTO(1L, 1L, 1, List.of(productOrderDTO));
+        Product product = new Product();
+        product.setStock(new Stock(1L, "KG", 10f));
 
-        when(userRepository.existsById(orderRequestDTO.getUserId())).thenReturn(false);
-        when(!jwtService.tokenHasRoleUser(servletRequest)).thenReturn(true);
+        when(jwtService.tokenHasRoleUser(servletRequest)).thenReturn(true);
+        when(productRepository.findById(2L)).thenReturn(Optional.of(product));
 
         ApiException exception = assertThrows(ApiException.class, () -> orderService.create(orderRequestDTO, servletRequest));
 
         assertEquals(HttpStatus.BAD_REQUEST, exception.getStatus());
         assertEquals("Usuario no encontrado.", exception.getMessage());
-        verify(userRepository, times(1)).existsById(orderRequestDTO.getUserId());
+
+        verify(userRepository, times(1)).findById(orderRequestDTO.getUserId());
+        verify(productRepository, never()).existsById(anyLong());
     }
 
     @Test
     void createInvalidProductShouldThrowApiException() {
         HttpServletRequest servletRequest = new MockHttpServletRequest();
-        ProductOrderDTO productOrderDTO = new ProductOrderDTO(2L,1);
+        ProductOrderDTO productOrderDTO = new ProductOrderDTO(2L, 1);
         OrderRequestDTO orderRequestDTO = new OrderRequestDTO(1L, 1L, 1, List.of(productOrderDTO));
 
         when(!jwtService.tokenHasRoleUser(servletRequest)).thenReturn(true);
@@ -141,20 +148,18 @@ class OrderServiceTest {
     @Test
     void createValidOrderShouldSaveOrder() {
         HttpServletRequest servletRequest = new MockHttpServletRequest();
-        ProductOrderDTO productOrderDTO = new ProductOrderDTO(2L,1);
+        ProductOrderDTO productOrderDTO = new ProductOrderDTO(2L, 1);
         OrderRequestDTO orderRequestDTO = new OrderRequestDTO(1L, 1L, 1, List.of(productOrderDTO));
-
-        User user = new User();
-        when(userRepository.existsById(orderRequestDTO.getUserId())).thenReturn(true);
-        when(userRepository.findById(orderRequestDTO.getUserId())).thenReturn(Optional.of(user));
-        when(!jwtService.tokenHasRoleUser(servletRequest)).thenReturn(true);
-
         Product product = new Product();
-        product.setStock(new Stock(1L,"KG",10f));
-        when(productRepository.existsById(productOrderDTO.getProductId())).thenReturn(true);
-        when(productRepository.findById(productOrderDTO.getProductId())).thenReturn(Optional.of(product));
+        product.setProductId(2L);
+        product.setStock(new Stock(1L, "KG", 10f));
+        User user = new User();
 
-        when(orderStateRepository.findByStateCode(OrderStateEnum.CONFIRMADO.ordinal())).thenReturn(new OrderState(1L, OrderStateEnum.CONFIRMADO.ordinal(), "Confirmado"));
+        when(jwtService.tokenHasRoleUser(servletRequest)).thenReturn(true);
+        when(ruleManager.validateOrder(any(Order.class))).thenReturn(true);
+        when(productRepository.findById(2L)).thenReturn(Optional.of(product));
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
+        when(orderStateRepository.findByStateCode(OrderStateEnum.CONFIRMADO.ordinal())).thenReturn(new OrderState(1L, 0, "Confirmado"));
 
         MessageResponseDTO result = orderService.create(orderRequestDTO, servletRequest);
 
@@ -163,4 +168,3 @@ class OrderServiceTest {
         verify(orderRepository, times(1)).save(any(Order.class));
     }
 }
-
